LayoutTests/fast/forms/resources/textarea-live-pseudo-selectors.js
@@ -96,7 +96,7 @@ shouldBe(elBackground, 'validColor');
 // Make the value dirty by deleting the last character.
 el.focus();
 el.setSelectionRange(10, 10);
-document.execCommand('\x08');
+document.execCommand('delete');
 el.maxLength = 5;
 shouldBe(elBackground, 'invalidColor');
 el.maxLength = 10;
